added settings save last list used and restore on addin load

--- a/RedLine/RedLine.csproj
+++ b/RedLine/RedLine.csproj
@@ -186,6 +186,7 @@
     <EmbeddedResource Include="Crutch\CrutchList_1_0.xsd">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -193,7 +194,9 @@
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SettingsService.cs" />
     <Compile Include="View\ManageCrutchListsDialog.cs">
       <SubType>Form</SubType>
     </Compile>
