--- a/RedLine/app.config
+++ b/RedLine/app.config
@@ -10,6 +10,15 @@
             <setting name="LastCrutchList" serializeAs="String">
                 <value />
             </setting>
+            <setting name="PanelVisible" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AdverbScannerEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="CrutchScannerEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
         </RedLine.Properties.Settings>
     </userSettings>
 </configuration>
