added homonym support

--- a/RedLine/Properties/Settings.settings
+++ b/RedLine/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="CrutchScannerEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="HomonymScannerEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
