--- a/RedLine/app.config
+++ b/RedLine/app.config
@@ -19,6 +19,9 @@
             <setting name="CrutchScannerEnabled" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="HomonymScannerEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
         </RedLine.Properties.Settings>
     </userSettings>
 </configuration>
